plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.1.6'  // https://github.com/JetBrains/gradle-intellij-plugin
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
}

apply plugin: 'java'
apply plugin: 'org.jetbrains.intellij'

group = pluginGroup
version = pluginVersion + '-' + platformVersion

sourceCompatibility = '11.0'
compileJava.options.encoding = 'UTF-8'

sourceSets {
    main.java.srcDirs = ['src']
    main.resources.srcDirs = ['resources']
    test.java.srcDirs = ['tests']
}

intellij {
    version = platformVersion
    type = platformType
    plugins = [
            'java',
            'JavaScriptLanguage',
            'com.jetbrains.hackathon.indices.viewer:' + indicesVersion,
            'PsiViewer:' + psiVersion
    ]

    patchPluginXml {
        sinceBuild = pluginSinceBuild
        untilBuild = pluginUntilBuild
        changeNotes = """
                <ul>
                    <li>#344 - Enabling spellchecker</li>
                    <li>#343 - Adding live templates for OCaml</li>
                    <li>#325 - Structure panel missing "pp_misc" for "let misc, pp_misc = ...". Gutter icon missing for pp_misc in mli file</li>
                    <li>#322 - Class types in .mli files should link to the corresponding definition in the .ml file</li>
                    <li>Add line markers for rescript</li>
                    <li>Enable line markers in every IDE</li>
                </ul>
                <p><a href="https://github.com/reasonml-editor/reasonml-idea-plugin/blob/master/CHANGELOG.md">Full change log...</a></p>
                <p/>
                <p>To see how to integrate reason tools (bsc, refmt), go to the website.</p>
            """.stripIndent()
    }
}

runPluginVerifier {
    ideVersions = [platformVersion + '.' + platformMinor]
}

runIde {
    systemProperty 'idea.is.internal', true
    jvmArgs '-Xmx2G'
}

/*
project(':jps-plugin') {
    jar.archiveFileName = "jps-plugin.jar"
    patchPluginXml.enabled = false
}

dependencies {
    implementation project(':jps-plugin')
}
*/
